--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^0.19.1",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "express-validation": "^1.0.3",
+    "joi": "^14.3.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
   },
